<resources>
    <string name="app_name">RepScore</string>
    <string name="action_settings">Settings</string>
    <string name="title">Welcome to RepScore!</string>
    <string name="auteurJonas">Jonas Croonenborghs \n r0615258</string>
    <string name="auteurJasper">Jasper Claes \n r0746526</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_excerises">ExcerisesActivity</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="title_activity_highscores">HighscoresActivity</string>

    <string name="facebook_app_id">458578941458032</string>
    <string name="fb_login_protocol_scheme">fb458578941458032</string>

    <string name="title_activity_user">UserActivity</string>
    <string name="text_go_homescreen">Go to homescreen</string>
    <string name="text_ready_for_workout">Ready for your workout? \n Log in with FaceBook! \n Already logged in? \n Go to homescreen! </string>
    <string name="text_add_1RM">Add 1 RM to your workouts</string>
    <string name="text_choose_musclegroup">Choose a musclegroup</string>
    <string name="text_loading">Loading exercises, this might take a while...</string>
    <string name="image_logo">Logo</string>
    <string name="image_author_Jonas">Image author Jonas</string>
    <string name="image_author_Jasper">Image author Jasper</string>
    <string name="image_user">Image of a user</string>
    <string name="image_musclegroups">Image of musclegroups</string>
    <string name="image_exercise">Image of exercise</string>
    <string name="image_towel">Image of a towel</string>
    <string name="image_pencil">Image of a towel</string>
    <string name="title_activity_update_delete_workout">UpdateDeleteWorkoutActivity</string>
    <string name="text_change_chart">Show chart max weight or total amounts</string>
    <string name="text_show_total">Show total amounts</string>
    <string name="text_show_max">Show max weight</string>
    <string name="text_start_tracking">Start tracking your workout</string>
    <string name="text_show_exercises">Show different exercises</string>
    <string name="text_update">Update</string>
    <string name="text_delete">Delete</string>
    <string name="text_go_back">Go back</string>
    <string name="text_go_home">Go to home</string>
    <string name="text_add_a_1RM">Add a 1 Rep Max !</string>
    <string name="text_pick_compound">Pick a compound exercise</string>
    <string name="text_weight">Weight</string>
    <string name="text_your_results">Your results !</string>
</resources>
