<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_logo"
            android:src="@drawable/logo_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_shadow"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageViewAuthorJonas"
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image_author_Jonas"
                android:src="@drawable/jonas" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/auteurJonas"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageViewAuthorJasper"
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image_author_Jasper"
                android:src="@drawable/jasper" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/auteurJasper"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_button"
                    android:onClick="btn_login_onClick"
                    android:text="@string/text_start_tracking"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_exercises"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_button"
                    android:onClick="btn_exercises_onClick"
                    android:text="@string/text_show_exercises"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>