<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UpdateDeleteWorkoutActivity"
    tools:showIn="@layout/activity_update_delete_workout">


    <LinearLayout
        android:id="@+id/linearLayoutAddWorkout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageViewWorkout"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/image_pencil"
            android:padding="20dp"
            android:src="@drawable/update_pencil" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_shadow"
            android:orientation="vertical"
            android:padding="20dp">

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/text_pick_compound" />

            <Spinner
                android:id="@+id/listViewCompoundLifts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/text_weight" />

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textViewWeightError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:visibility="invisible" />

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="125dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:onClick="buttonUpdate_onClick"
                android:text="@string/text_update"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/lightGray"
                android:onClick="buttonDelete_onClick"
                android:text="@string/text_delete"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
