<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewLoginTowel"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_towel"
            android:padding="20dp"
            android:src="@drawable/login_towel" />

        <TextView
            android:id="@+id/textViewReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_ready_for_workout"
            android:textSize="25sp"
            android:background="@drawable/border_shadow"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/buttonLogin"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:gravity="center" />

        <Button
            android:id="@+id/buttonHomeScreen"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_button"
            android:onClick="buttonHomeScreen_onClick"
            android:text="@string/text_go_homescreen"
            android:textColor="@color/white"
            android:visibility="invisible" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>